--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "webpack --mode production",
-		"start": "webpack-dev-server --open --mode development",
-		"deploy": "yarn build && netlify deploy --prod"
+		"start": "webpack-dev-server --open --mode development"
 	},
 	"keywords": [],
 	"author": "",
